--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+
+    <!-- TO see images 
+        <img src="http://localhost:3000/image/products/5ef7e6d96e61c404fbffbf7d-873.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwic3RhdHVzIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZWQzZjA0YzI3ZTc3YzAzN2E4ZWJlNjAiLCJuYW1lIjoiQ2FybG9zIEdhcmPDrWEgVGVqYWRhIiwiZW1haWwiOiJjYXJsb3NAY29ycmVvLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU5MzMwNDEyMCwiZXhwIjoxNTkzNDc2OTIwfQ.5uqOP44OcujCnE1JBQ2IeTjWjB_zPIyt5apPvCjhfZ4"> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
